--- a/community-user/community/pages/focus/focus.wxml
+++ b/community-user/community/pages/focus/focus.wxml
@@ -5,11 +5,28 @@
     </view>
 </view>
 
-<scroll-view>
+<scroll-view scroll-view scroll-y="true" class="container">
     <view hidden="{{currentNavtab==0 ? '' : true}}">
         <text>问题</text>
     </view>
     <view hidden="{{currentNavtab==1 ? '' : true}}">
-        <text>答主</text>
+        <block wx:for="{{focus}}" wx:for-index="key" wx:for-item="item">
+            <view class="feed-item" id="{{item.user_id}}">
+                <view class="feed-source">
+                    <view class="avatar">
+                        <image src="{{item.user_avatar}}" ></image>
+                    </view>
+                    <text>{{item.user_name}}</text>
+                </view>
+                <view class="feed-content">
+                    <view class="question" qid="{{question_id}}">
+                        <view class="question-link">
+                            <text>{{item.question_content}}</text>
+                        </view>
+                            <text class="answer-txt" aid="{{answer_id}}">{{item.answer_content}}</text>
+                    </view>
+                </view>
+            </view>
+        </block>
     </view>
 </scroll-view>
