--- a/community-user/community/pages/questions/questions.wxml
+++ b/community-user/community/pages/questions/questions.wxml
@@ -1,2 +1,20 @@
 <!--pages/questions/questions.wxml-->
-<text>问题列表</text>
+<scroll-view scroll-y="true" class="container">
+  <view class="page-header">
+    <text class="page-title">问题广场</text>
+    <view class = "ask-container" bindtap="onTap">
+        <image class="image" src="/images/ask.png"></image>
+        <text class = "ask">提问</text>
+    </view>
+  </view>
+  <block wx:for="{{feed}}" wx:for-index="key" wx:for-item="value">
+    <view class="feed-item">
+      <view class="feed-content">
+       <image class="item-more" mode="aspectFit" src="../../images/more.png"></image>
+        <view class="question" id="{{value.question_id}}" bindtap="bindItemTap">
+          <text>{{value.question}}</text>
+        </view>
+      </view>
+    </view>
+  </block>
+</scroll-view>
