--- a/community-user/community/pages/questions/questions.wxss
+++ b/community-user/community/pages/questions/questions.wxss
@@ -1,1 +1,83 @@
 /* pages/questions/questions.wxss */
+
+.container{
+  height: 1500rpx;
+}
+.container .search{
+  width: 735rpx;
+  height: 65rpx;
+  padding: 12.5rpx 0 12.5rpx 15rpx;
+  background: #2A8CE5;
+}
+
+.container{
+  padding: 0;
+  font-size: 14rpx;
+  background: #F0F4F3;
+  color: #000;
+}
+
+.container .feed-item{
+  width: 690rpx;
+  padding: 30rpx 30rpx 20rpx;
+  margin: 7rpx 0 6rpx 0;
+  background: #ffffff;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 2px 5px #eeeeee;
+  font-size: 30rpx;
+}
+
+.page-header{
+   /* display: flex; */
+   /* justify-content:center; */
+   border-bottom:1 rpx solid #ccc;
+}
+
+.page-title{
+
+padding:20rpx 40rpx;
+color:#999;
+font-size:38rpx;
+text-align:center;
+display: flex;
+justify-content: center;
+}
+
+.item-more{
+  width: 40rpx;
+  height: 45rpx;
+  float: right;
+}
+
+.ask-container{
+
+  margin-top:-80rpx;
+  border:1px dotted #405f80;
+  width:150rpx;
+  height:80rpx;
+  border-radius:5px;
+  text-align:middle;
+  float: right;
+  margin-right: 5px;
+  
+}
+
+.image{
+  margin-top:10rpx;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 40rpx;
+  height:35rpx;
+  
+  
+}
+.ask{
+  font-size:32rpx; 
+  font-weight:lighter;
+  line-height:80rpx;
+  color:#405f80;
+  font-family: fantasy;
+  font-style: italic;
+}
+
