--- a/community-user/community/pages/ask/ask.wxss
+++ b/community-user/community/pages/ask/ask.wxss
@@ -1,44 +1,58 @@
-page{
-  height:100%;
+page {
+    height: 100%;
 }
 
-.container{
-  display:flex;
-  flex-direction: column; 
-  align-items: center; 
-  height:100%;
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
 }
 
-.section{
-  height:100%;
+.section {
+    height: 100%;
 }
 
-.form-style{
-  height:100%;
+.form-style {
+    height: 100%;
 }
 
-.textarea-style{
-  height:650rpx;
-  width:750rpx;
+.question_title{
+    margin-top:20rpx;
+    height: 100rpx;
+    width: 700rpx;
+    font-size: 28px;
 }
 
-.button-style{
-  height:100rpx;
-  width:150rpx;
+.textarea-style {
+    margin-top:5px;
+    height: 650rpx;
+    width: 700rpx;
 }
 
-
-.currentWordNumber{
-  font-size: 28rpx;
-  color: gray;
-  position: absolute;
-  left: 593rpx;
-  top: -6rpx;
+.line {
+    border: 1px solid #0068c4;
 }
-.hint{
-   font-size: 28rpx;
-   position: absolute;
-   top: 120rpx;
-   left: 30rpx;
-   color: #FF6600;
+
+.button-style {
+    height: 100rpx;
+    width: 150rpx;
+}
+
+.currentWordNumber {
+    font-size: 28rpx;
+    color: gray;
+    float: right;
+    z-index: 6666;
+    margin-top: 600rpx;
+
+    
+}
+
+.hint {
+    font-size: 28rpx;
+    position: absolute;
+    top: 120rpx;
+    left: 30rpx;
+    color: #f60;
 }
