--- a/community-user/community/pages/detail/detail.wxss
+++ b/community-user/community/pages/detail/detail.wxss
@@ -12,7 +12,7 @@
 
 .page-header {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   border-bottom: 1 rpx solid #ccc;
   padding: 20rpx 40rpx;
   font-size: 35rpx;
@@ -22,6 +22,12 @@
 .add {
   margin-left: 10rpx;
   padding-bottom: 20rpx;
+}
+
+.add .write-container{
+    display: flex;
+    align-items: center;
+    margin-left: 25rpx;
 }
 
 .add image {
