--- a/community-user/community/pages/questions/questions.wxss
+++ b/community-user/community/pages/questions/questions.wxss
@@ -53,23 +53,22 @@ justify-content: center;
 .ask-container{
 
   margin-top:-80rpx;
-  border:1px dotted #405f80;
-  width:150rpx;
-  height:80rpx;
+  border:1px solid #405f80;
+  width:120rpx;
+  height:65rpx;
   border-radius:5px;
   text-align:middle;
   float: right;
   margin-right: 5px;
-  
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .image{
-  margin-top:10rpx;
-  margin-left: 5px;
-  margin-right: 5px;
   width: 40rpx;
   height:35rpx;
-  
   
 }
 .ask{
