--- a/community-user/community/pages/answer/answer.wxml
+++ b/community-user/community/pages/answer/answer.wxml
@@ -2,7 +2,7 @@
 <view class="container">
   <view class="section">
     <form class="form-style" bindsubmit="bindFormSubmit">
-      <textarea class="textarea-style" placeholder="请添加回答" name="textarea" bindblur='textBlur' minlength="{{min}}" maxlength="{{max}}" bindinput="inputs">
+      <textarea class="textarea-style" placeholder="请添加回答" name="answer_content" bindblur='textBlur' minlength="{{min}}" maxlength="{{max}}" bindinput="inputs">
         <text class="hint">{{texts}}</text>
       </textarea>
       <button class="button-style" bindtap='onTap' form-type="submit"> 发表 </button>
