--- a/community-user/community/pages/detail/detail.wxss
+++ b/community-user/community/pages/detail/detail.wxss
@@ -1,13 +1,11 @@
 /* pages/detail/detail.wxss */
 
 .care {
-  width: 230rpx;
+  width: 200rpx;
   height: 70rpx;
-  font-size: 30rpx;
-  text-align: center;
-  text-decoration: none;
+  font-size: 28rpx;
   margin-right: 30rpx;
-  margin-top: 10rpx;
+  border-radius: 20rpx;
 }
 
 .page-header {
@@ -22,12 +20,15 @@
 .add {
   margin-left: 10rpx;
   padding-bottom: 20rpx;
+  display: flex;
+  text-align: center;
+  vertical-align: middle;
 }
 
-.add .write-container{
-    display: flex;
-    align-items: center;
-    margin-left: 25rpx;
+.add .write-container {
+  display: flex;
+  align-items: center;
+  margin-left: 25rpx;
 }
 
 .add image {
@@ -86,7 +87,6 @@
 }
 
 .answer-item .answer-content .answerer_name {
-  color: #818a8f;
   font-size: 28rpx;
   padding: 0 0 8rpx 0;
 }
@@ -110,7 +110,7 @@
   border-bottom: solid 1px #ebebeb;
 }
 
-.showtime text{
+.showtime text {
   display: inline-block;
   color: #9a9c9b;
   font-size: 28rpx;
