--- a/community-user/community/pages/focus/focus.wxss
+++ b/community-user/community/pages/focus/focus.wxss
@@ -145,4 +145,17 @@
   content: "•";
 }
 
-/*feed-item part is in app.wxss for multiplexing*/
+.item{
+  width: 690rpx;
+  padding: 30rpx 30rpx 20rpx;
+  margin: 7rpx 0 6rpx 0;
+  background: #ffffff;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 2px 5px #eeeeee;
+  font-size: 30rpx;
+}
+
+.answer-txt{
+  color: #9a9c9b;
+}
