--- a/community-user/community/pages/me/me.wxml
+++ b/community-user/community/pages/me/me.wxml
@@ -1,15 +1,42 @@
 <!--pages/me/me.wxml-->
+<!-- 引入wxs脚本 -->
+<wxs src="../../util/subutil.wxs" module="tools" />
 <view class="top-tab flex-wrp flex-tab ">
-    <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
-        {{itemName}}
-    </view>
+  <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
+    {{itemName}}
+  </view>
 </view>
-
-<scroll-view>
-    <view hidden="{{currentNavtab==0 ? '' : true}}">
-        <text>提问</text>
-    </view>
-    <view hidden="{{currentNavtab==1 ? '' : true}}">
-        <text>回答</text>
-    </view>
+<scroll-view scroll-view scroll-y="true" class="container">
+  <view hidden="{{currentNavtab==0 ? '' : true}}">
+    <block wx:for="{{questions}}" wx:for-index="key" wx:for-item="value">
+      <view class="item">
+        <view class="content">
+          <view class="question" id="{{value.question_id}}" bindtap="bindItemTap">
+            <!-- 通过自定义的module名称tools引用sub截取方法 -->
+            <text class="question_content">{{tools.sub(value.question)}}</text>
+            <view>
+              <text class="time">{{value.question_time}}</text>
+            </view>
+          </view>
+        </view>
+      </view>
+    </block>
+  </view>
+  <view hidden="{{currentNavtab==1 ? '' : true}}">
+    <block wx:for="{{focus}}" wx:for-index="key" wx:for-item="item">
+      <view class="feed-item" id="{{item.user_id}}">
+        <view class="feed-content">
+          <view class="question" qid="{{question_id}}">
+            <view class="question-link">
+              <text>{{item.question_content}}</text>
+            </view>
+            <text class="answer-txt" >{{item.answer_content}}</text>
+            <view>
+              <text class="time">{{item.answer_time}}</text>
+            </view>
+          </view>
+        </view>
+      </view>
+    </block>
+  </view>
 </scroll-view>
