--- a/community-user/community/pages/me/me.wxss
+++ b/community-user/community/pages/me/me.wxss
@@ -28,3 +28,38 @@
   color: #ffffff;
   border-bottom: solid 2px #ffffff;
 }
+
+.item{
+  width: 690rpx;
+  height: 80rpx;
+  padding: 30rpx 30rpx 20rpx;
+  margin: 7rpx 0 6rpx 0;
+  background: #ffffff;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 2px 5px #eeeeee;
+  font-size: 30rpx;
+}
+
+.time{
+  vertical-align: text-bottom;
+  color: #9a9c9b;
+  margin-top: 10rpx;
+  float: right;
+}
+
+.feed-item{
+  width: 690rpx;
+  height: 300rpx;
+  padding: 30rpx 30rpx 20rpx;
+  margin: 7rpx 0 6rpx 0;
+  background: #ffffff;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 2px 5px #eeeeee;
+  font-size: 30rpx;
+}
+
+.answer-txt{
+  color: #9a9c9b;
+}
