--- a/community-user/community/pages/notify/notify.wxss
+++ b/community-user/community/pages/notify/notify.wxss
@@ -1,1 +1,81 @@
 /* pages/notify/notify.wxss */
+
+.container {
+  height: 1500rpx;
+}
+
+.container {
+  padding: 0;
+  font-size: 14rpx;
+  background: #f0f4f3;
+  color: #000;
+}
+
+.page-header {
+  /* display: flex; *//* justify-content:center; */
+  border-bottom: 1 rpx solid #ccc;
+}
+
+.page-title {
+  padding: 20rpx 40rpx;
+  color: #999;
+  font-size: 38rpx;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.container .feed-item{
+  width: 690rpx;
+  height: 200rpx;
+  padding: 30rpx 30rpx 20rpx;
+  margin: 7rpx 0 6rpx 0;
+  background: #ffffff;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 2px 5px #eeeeee;
+}
+
+.container .feed-item .feed-source .avatar{
+  position: relative;
+  display: inline-block;
+}
+
+.container .feed-item .feed-source .avatar image{
+  display: inline-block;
+  width: 45rpx;
+  height: 45rpx;
+  border-radius: 45rpx;
+  top: 10rpx;
+  vertical-align: middle;
+}
+
+.container .feed-item .feed-content .question{
+  font-size: 28rpx;
+  font-weight: 600px;
+  line-height: 40rpx;
+}
+
+.question_name {
+  margin-top: 10rpx;
+  vertical-align: middle;
+}
+
+.answer_content {
+  color: #9a9c9b;
+}
+
+.ranker_name {
+  color: #9a9c9b;
+  text-align: center;
+  font-size: 26rpx;
+  margin-left: 10rpx;
+  vertical-align: middle;
+}
+
+.time {
+  vertical-align: text-bottom;
+  color: #9a9c9b;
+  float: right;
+  font-size: 26rpx;
+}
