--- a/community-user/community/pages/questions/questions.wxss
+++ b/community-user/community/pages/questions/questions.wxss
@@ -1,63 +1,61 @@
 /* pages/questions/questions.wxss */
 
-.container{
+.container {
   height: 1500rpx;
 }
-.container .search{
+
+.container .search {
   width: 735rpx;
   height: 65rpx;
   padding: 12.5rpx 0 12.5rpx 15rpx;
-  background: #2A8CE5;
+  background: #2a8ce5;
 }
 
-.container{
+.container {
   padding: 0;
   font-size: 14rpx;
-  background: #F0F4F3;
+  background: #f0f4f3;
   color: #000;
 }
 
-.container .feed-item{
+.container .feed-item {
   width: 690rpx;
   padding: 30rpx 30rpx 20rpx;
   margin: 7rpx 0 6rpx 0;
-  background: #ffffff;
+  background: #fff;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
-  box-shadow: 0 2px 5px #eeeeee;
+  box-shadow: 0 2px 5px #eee;
   font-size: 30rpx;
 }
 
-.page-header{
-   /* display: flex; */
-   /* justify-content:center; */
-   border-bottom:1 rpx solid #ccc;
+.page-header {
+  /* display: flex; *//* justify-content:center; */
+  border-bottom: 1 rpx solid #ccc;
 }
 
-.page-title{
-
-padding:20rpx 40rpx;
-color:#999;
-font-size:38rpx;
-text-align:center;
-display: flex;
-justify-content: center;
+.page-title {
+  padding: 20rpx 40rpx;
+  color: #999;
+  font-size: 38rpx;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
-.item-more{
+.item-more {
   width: 40rpx;
   height: 45rpx;
   float: right;
 }
 
-.ask-container{
-
-  margin-top:-80rpx;
-  border:1px solid #405f80;
-  width:120rpx;
-  height:65rpx;
-  border-radius:5px;
-  text-align:middle;
+.ask-container {
+  margin-top: -80rpx;
+  border: 1px solid #405f80;
+  width: 120rpx;
+  height: 65rpx;
+  border-radius: 5px;
+  text-align: middle;
   float: right;
   margin-right: 5px;
   display: flex;
@@ -66,17 +64,16 @@ justify-content: center;
   justify-content: center;
 }
 
-.image{
+.image {
   width: 40rpx;
-  height:35rpx;
-  
+  height: 35rpx;
 }
-.ask{
-  font-size:32rpx; 
-  font-weight:lighter;
-  line-height:80rpx;
-  color:#405f80;
+
+.ask {
+  font-size: 32rpx;
+  font-weight: lighter;
+  line-height: 80rpx;
+  color: #405f80;
   font-family: fantasy;
   font-style: italic;
 }
-
