--- a/community-user/community/pages/answer/answer.wxss
+++ b/community-user/community/pages/answer/answer.wxss
@@ -1,44 +1,44 @@
-page{
-  height:100%;
+page {
+  height: 100%;
 }
 
-.container{
-  display:flex;
-  flex-direction: column; 
-  align-items: center; 
-  height:100%;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
 }
 
-.section{
-  height:100%;
+.section {
+  height: 100%;
 }
 
-.form-style{
-  height:100%;
+.form-style {
+  height: 100%;
 }
 
-.textarea-style{
-  height:850rpx;
-  width:700rpx;
+.textarea-style {
+  /* margin-top: */
+  margin-top: 5px;
+  font-size: 34rpx;
+  height: 850rpx;
+  width: 700rpx;
 }
 
-.button-style{
-  height:100rpx;
-  width:150rpx;
+.button-style {
+  height: 100rpx;
+  width: 150rpx;
 }
 
-
-
-.hint{
-   font-size: 28rpx;
-   position: absolute;
-   top: 120rpx;
-   left: 30rpx;
-   color: #FF6600;
+.hint {
+  font-size: 28rpx;
+  position: absolute;
+  top: 120rpx;
+  left: 30rpx;
+  color: #f60;
 }
 
-
-.radio-group{
+.radio-group {
   /* display: flex; */
   position: relative;
   height: 15px;
