--- a/community-user/community/pages/focus/focus.wxml
+++ b/community-user/community/pages/focus/focus.wxml
@@ -1,6 +1,6 @@
 <!--pages/focus/focus.wxml-->
 <!-- 引入wxs脚本 -->
-<wxs src="../../util/subutil.wxs" module="tools"/>
+<wxs src="../../util/subutil.wxs" module="tools" />
 <view class="top-tab flex-wrp flex-tab ">
   <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
     {{itemName}}
@@ -8,21 +8,21 @@
 </view>
 
 <scroll-view scroll-view scroll-y="true" class="container">
-  <view hidden="{{currentNavtab==0 ? '' : true}}">
+  <view hidden="{{currentNavtab==0 ? false : true}}">
     <block wx:for="{{feed}}" wx:for-index="key" wx:for-item="value">
-      <view class="item">
+      <view class="item" bindtap="bindQuestionItemTap">
         <view class="content">
-          <view class="question" id="{{value.question_id}}" bindtap="bindItemTap">
-             <!-- 通过自定义的module名称tools引用sub截取方法 -->
-          <text >{{tools.sub(value.question)}}</text>
+          <view class="question" id="{{value.question_id}}">
+            <!-- 通过自定义的module tools引用sub截取方法 -->
+            <text>{{tools.sub(value.question)}}</text>
           </view>
         </view>
       </view>
     </block>
   </view>
-  <view hidden="{{currentNavtab==1 ? '' : true}}">
+  <view hidden="{{currentNavtab==1 ? false : true}}">
     <block wx:for="{{focus}}" wx:for-index="key" wx:for-item="item">
-      <view class="feed-item" id="{{item.user_id}}">
+      <view class="feed-item" id="{{item.user_id}}" bindtap="bindAnswerItemTap">
         <view class="feed-source">
           <view class="avatar">
             <image src="{{item.user_avatar}}"></image>
