--- a/community-user/community/pages/focus/focus.wxss
+++ b/community-user/community/pages/focus/focus.wxss
@@ -1,22 +1,25 @@
 /* pages/focus/focus.wxss */
-.flex-wrp{
+
+.flex-wrp {
   display: flex;
 }
-.flex-tab{
+
+.flex-tab {
   flex-flow: row nowrap;
   justify-content: space-around;
   align-items: stretch;
 }
-.flex-item{
+
+.flex-item {
   flex-grow: 1;
   text-align: center;
 }
 
-.top-tab{
+.top-tab {
   width: 750rpx;
-  height: 100rpx;
-  background: #298DE5;
-  color: #8CCEFD;
+  height: 90rpx;
+  background: #298de5;
+  color: #8ccefd;
   font-size: 28rpx;
   line-height: 100rpx;
   box-shadow: 0 2px 2px #bebebe;
@@ -24,74 +27,44 @@
   z-index: 9999;
 }
 
-.toptab.active{
-  color: #ffffff;
-  border-bottom: solid 2px #ffffff;
+.toptab.active {
+  color: #fff;
+  border-bottom: solid 2px #fff;
 }
 
 /**index.wxss**/
 
-.container{
-  height: 1500rpx;
-}
-.container .search{
-  width: 735rpx;
-  height: 65rpx;
-  padding: 12.5rpx 0 12.5rpx 15rpx;
-  background: #2A8CE5;
-}
-.container .search-left{
-  flex: 8;
-  background: #4EA3E7;
-  text-align: left;
-}
-.container .search-left input{
-  display: inline-block;
-  height: 65rpx;
-  font-size: 26rpx;
-}
-.search-placeholder{
-  color: #8CCEFD;
-  line-height: 20rpx;
-}
-.container .search .search-left image{
-  display: inline-block;
-  width: 35rpx;
-  height: 35rpx;
-  padding: 15rpx 15rpx 15rpx 20rpx;
-}
-.container .search .search-right{
-  flex: 1;
-}
-.container .search .search-right image{
-  width: 45rpx;
-  height: 45rpx;
-  padding: 10rpx;
-}
 
-.container .feed-item{
+
+
+
+.container .feed-item {
   width: 690rpx;
   padding: 30rpx 30rpx 20rpx;
   margin: 7rpx 0 6rpx 0;
-  background: #ffffff;
+  background: #fff;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
-  box-shadow: 0 2px 5px #eeeeee;
+  box-shadow: 0 2px 5px #eee;
 }
-.container .feed-item .feed-source{
+
+.container .feed-item .feed-source {
   width: 690rpx;
   left: 0;
   height: 50rpx;
 }
-.container .feed-item .feed-source .avatar{
+
+.container .feed-item .feed-source .avatar {
   position: relative;
   display: inline-block;
 }
-.container .feed-item .feed-source a{
+
+.container .feed-item .feed-source a {
   display: inline-block;
   height: 40rpx;
 }
-.container .feed-item .feed-source .avatar image{
+
+.container .feed-item .feed-source .avatar image {
   /*position: absolute;*/
   display: inline-block;
   width: 45rpx;
@@ -100,62 +73,46 @@
   top: 10rpx;
   vertical-align: middle;
 }
-.container .feed-item .feed-source text{
+
+.container .feed-item .feed-source text {
   /*position: absolute;*/
   display: inline-block;
   height: 40rpx;
   line-height: 40rpx;
   vertical-align: middle;
   margin: 0 0 0 15rpx;
-  color: #a0acac;
+  color: #333;
   font-size: 26rpx;
 }
-.container .feed-item .feed-source .item-more{
+
+.container .feed-item .feed-source .item-more {
   display: inline-block;
   width: 40rpx;
   height: 45rpx;
 }
-.container .feed-item .feed-content{
+
+.container .feed-item .feed-content {
   padding: 10rpx 0 0 0;
 }
-.container .feed-item .feed-content .question text{
+
+.container .feed-item .feed-content .question text {
   font-size: 28rpx;
   font-weight: 600px;
   line-height: 40rpx;
 }
-.container .feed-item .feed-content .answer-body{
-  padding: 10rpx 0 0 0;
-  /*height: 10rpx;*/
-  font-size: 24rpx;
-  line-height: 28rpx;
-  color: #5b5b5b;
-}
-.container .feed-item .feed-content .answer-actions{
-  width: 690rpx;
-  padding: 10rpx 0  0;
-  color: #a0acac;
-}
-.container .feed-item .feed-content .answer-actions view{
-  display: inline-block;
-  vertical-align: text-bottom;
-  padding: 0 10rpx 0 0;
-  font-size: 24rpx;
-}
-.container .feed-item .feed-content .answer-actions .dot ::after{
-  content: "•";
-}
 
-.item{
+
+.item {
   width: 690rpx;
   padding: 30rpx 30rpx 20rpx;
   margin: 7rpx 0 6rpx 0;
-  background: #ffffff;
+  background: #fff;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
-  box-shadow: 0 2px 5px #eeeeee;
+  box-shadow: 0 2px 5px #eee;
   font-size: 30rpx;
 }
 
-.answer-txt{
-  color: #9a9c9b;
+.answer-txt {
+  color: #666;
 }
