--- a/community-user/community/pages/me/me.wxml
+++ b/community-user/community/pages/me/me.wxml
@@ -9,9 +9,9 @@
 <scroll-view scroll-view scroll-y="true" class="container">
   <view hidden="{{currentNavtab==0 ? '' : true}}">
     <block wx:for="{{questions}}" wx:for-index="key" wx:for-item="value">
-      <view class="item">
+      <view class="item" bindtap="bindQuestionItemTap">
         <view class="content">
-          <view class="question" id="{{value.question_id}}" bindtap="bindItemTap">
+          <view class="question" id="{{value.question_id}}" >
             <!-- 通过自定义的module名称tools引用sub截取方法 -->
             <text class="question_content">{{tools.sub(value.question)}}</text>
             <view>
@@ -24,13 +24,13 @@
   </view>
   <view hidden="{{currentNavtab==1 ? '' : true}}">
     <block wx:for="{{focus}}" wx:for-index="key" wx:for-item="item">
-      <view class="feed-item" id="{{item.user_id}}">
+      <view class="feed-item" id="{{item.user_id}}" bindtap="bindAnswerItemTap">
         <view class="feed-content">
           <view class="question" qid="{{question_id}}">
             <view class="question-link">
               <text>{{item.question_content}}</text>
             </view>
-            <text class="answer-txt" >{{item.answer_content}}</text>
+            <text class="answer-txt">{{item.answer_content}}</text>
             <view>
               <text class="time">{{item.answer_time}}</text>
             </view>
