--- a/community-user/community/pages/me/me.wxss
+++ b/community-user/community/pages/me/me.wxss
@@ -1,22 +1,25 @@
 /* pages/me/me.wxss */
-.flex-wrp{
+
+.flex-wrp {
   display: flex;
 }
-.flex-tab{
+
+.flex-tab {
   flex-flow: row nowrap;
   justify-content: space-around;
   align-items: stretch;
 }
-.flex-item{
+
+.flex-item {
   flex-grow: 1;
   text-align: center;
 }
 
-.top-tab{
+.top-tab {
   width: 750rpx;
-  height: 100rpx;
-  background: #298DE5;
-  color: #8CCEFD;
+  height: 90rpx;
+  background: #298de5;
+  color: #8ccefd;
   font-size: 28rpx;
   line-height: 100rpx;
   box-shadow: 0 2px 2px #bebebe;
@@ -24,42 +27,42 @@
   z-index: 9999;
 }
 
-.toptab.active{
-  color: #ffffff;
-  border-bottom: solid 2px #ffffff;
+.toptab.active {
+  color: #fff;
+  border-bottom: solid 2px #fff;
 }
 
-.item{
+.item {
   width: 690rpx;
   height: 80rpx;
   padding: 30rpx 30rpx 20rpx;
   margin: 7rpx 0 6rpx 0;
-  background: #ffffff;
+  background: #fff;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
-  box-shadow: 0 2px 5px #eeeeee;
+  box-shadow: 0 2px 5px #eee;
   font-size: 30rpx;
 }
 
-.time{
+.time {
   vertical-align: text-bottom;
   color: #9a9c9b;
   margin-top: 10rpx;
   float: right;
 }
 
-.feed-item{
+.feed-item {
   width: 690rpx;
   height: 300rpx;
   padding: 30rpx 30rpx 20rpx;
   margin: 7rpx 0 6rpx 0;
-  background: #ffffff;
+  background: #fff;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
-  box-shadow: 0 2px 5px #eeeeee;
+  box-shadow: 0 2px 5px #eee;
   font-size: 30rpx;
 }
 
-.answer-txt{
-  color: #9a9c9b;
+.answer-txt {
+  color: #666;
 }
