--- a/community-user/community/pages/notify/notify.wxss
+++ b/community-user/community/pages/notify/notify.wxss
@@ -14,34 +14,36 @@
 .page-header {
   /* display: flex; *//* justify-content:center; */
   border-bottom: 1 rpx solid #ccc;
+  background-color: #298de5;
+  height: 90rpx;
 }
 
 .page-title {
   padding: 20rpx 40rpx;
-  color: #999;
+  color: #8ccefd;
   font-size: 38rpx;
   text-align: center;
   display: flex;
   justify-content: center;
 }
 
-.container .feed-item{
+.container .feed-item {
   width: 690rpx;
   height: 200rpx;
   padding: 30rpx 30rpx 20rpx;
   margin: 7rpx 0 6rpx 0;
-  background: #ffffff;
+  background: #fff;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
-  box-shadow: 0 2px 5px #eeeeee;
+  box-shadow: 0 2px 5px #eee;
 }
 
-.container .feed-item .feed-source .avatar{
+.container .feed-item .feed-source .avatar {
   position: relative;
   display: inline-block;
 }
 
-.container .feed-item .feed-source .avatar image{
+.container .feed-item .feed-source .avatar image {
   display: inline-block;
   width: 45rpx;
   height: 45rpx;
@@ -50,7 +52,7 @@
   vertical-align: middle;
 }
 
-.container .feed-item .feed-content .question{
+.container .feed-item .feed-content .question {
   font-size: 28rpx;
   font-weight: 600px;
   line-height: 40rpx;
@@ -59,14 +61,15 @@
 .question_name {
   margin-top: 10rpx;
   vertical-align: middle;
+  color:#333;
 }
 
 .answer_content {
-  color: #9a9c9b;
+  color: #666;
 }
 
 .ranker_name {
-  color: #9a9c9b;
+  color: #333;
   text-align: center;
   font-size: 26rpx;
   margin-left: 10rpx;
