--- a/community-user/community/pages/questions/questions.wxml
+++ b/community-user/community/pages/questions/questions.wxml
@@ -1,20 +1,20 @@
 <!--pages/questions/questions.wxml-->
 <!-- 引入wxs脚本 -->
-<wxs src="../../util/subutil.wxs" module="tools"/>
+<wxs src="../../util/subutil.wxs" module="tools" />
 <scroll-view scroll-y="true" class="container">
   <view class="page-header">
     <text class="page-title">问题广场</text>
-    <view class = "ask-container" bindtap="onTap">
-        <image class="image" src="/images/ask_t.png"></image>
-        <text class = "ask">提问</text>
+    <view class="ask-container" bindtap="onTap">
+      <image class="image" src="/images/ask_white.png"></image>
+      <text class="ask">提问</text>
     </view>
   </view>
   <block wx:for="{{feed}}" wx:for-index="key" wx:for-item="value">
     <view class="feed-item">
       <view class="feed-content">
         <view class="question" id="{{value.question_id}}" bindtap="bindItemTap">
-        <!-- 通过自定义的module名称tools引用sub截取方法 -->
-          <text >{{tools.sub(value.question)}}</text>
+          <!-- 通过自定义的module名称tools引用sub截取方法 -->
+          <text>{{tools.sub(value.question)}}</text>
         </view>
       </view>
     </view>
