--- a/community-user/community/pages/questions/questions.wxss
+++ b/community-user/community/pages/questions/questions.wxss
@@ -1,20 +1,11 @@
 /* pages/questions/questions.wxss */
 
-.container {
-  height: 1500rpx;
-}
 
-.container .search {
-  width: 735rpx;
-  height: 65rpx;
-  padding: 12.5rpx 0 12.5rpx 15rpx;
-  background: #2a8ce5;
-}
 
 .container {
   padding: 0;
   font-size: 14rpx;
-  background: #f0f4f3;
+  background: #fff;
   color: #000;
 }
 
@@ -32,32 +23,27 @@
 .page-header {
   /* display: flex; *//* justify-content:center; */
   border-bottom: 1 rpx solid #ccc;
+  background-color: #298de5;
+  height: 90rpx;
 }
 
 .page-title {
   padding: 20rpx 40rpx;
-  color: #999;
+  color: #8ccefd;
   font-size: 38rpx;
   text-align: center;
   display: flex;
   justify-content: center;
 }
 
-.item-more {
-  width: 40rpx;
-  height: 45rpx;
-  float: right;
-}
-
 .ask-container {
-  margin-top: -80rpx;
-  border: 1px solid #405f80;
+  margin-top: -75rpx;
   width: 120rpx;
-  height: 65rpx;
-  border-radius: 5px;
+  height: 60rpx;
+  border-radius: 10rpx;
   text-align: middle;
   float: right;
-  margin-right: 5px;
+  margin-right: 40rpx;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -70,10 +56,9 @@
 }
 
 .ask {
-  font-size: 32rpx;
+  font-size: 28rpx;
   font-weight: lighter;
   line-height: 80rpx;
-  color: #405f80;
-  font-family: fantasy;
-  font-style: italic;
+  color: #eee;
+  margin-top: 4rpx;
 }
