--- a/community-user/community/pages/welcome/welcome.wxss
+++ b/community-user/community/pages/welcome/welcome.wxss
@@ -1,52 +1,52 @@
 .container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 200rpx 0;
-    box-sizing: border-box;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 200rpx 0;
+  box-sizing: border-box;
 }
 
 .userinfo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.userinfo button{
-    margin-top:30px;
+.userinfo button {
+  margin-top: 30px;
 }
 
 .userinfo-avatar {
-    width: 200rpx;
-    height: 200rpx;
-    margin: 20rpx;
-    border-radius: 50%;
+  width: 200rpx;
+  height: 200rpx;
+  margin: 20rpx;
+  border-radius: 50%;
 }
 
 .userinfo-nickname {
-    margin-top: 50px;
-    color: #666;
+  margin-top: 50px;
+  color: #666;
 }
 
 .usermotto {
-    margin-top: 200px;
-    color: #333;
+  margin-top: 200px;
+  color: #333;
 }
 
-.entry-container{
-    margin-top:120px;
-    border: 1px solid #0068C4;
-    width: 200rpx;
-    height:80rpx;
-    border-radius: 5px;
-    text-align: center;
+.entry-container {
+  margin-top: 120px;
+  border: 1px solid #0068c4;
+  width: 200rpx;
+  height: 80rpx;
+  border-radius: 5px;
+  text-align: center;
 }
 
-.entry{
-    font-size: 32rpx;
-    font-weight: bold;
-    line-height: 80rpx;
-    color: #0068C4;
+.entry {
+  font-size: 32rpx;
+  font-weight: bold;
+  line-height: 80rpx;
+  color: #0068c4;
 }
