--- a/community-user/community/util/subutil.wxs
+++ b/community-user/community/util/subutil.wxs
@@ -1,23 +1,23 @@
-var sub=function(val){
-  if(val.length==0||val==undefined){
+var sub = function(val) {
+  if (val.length == 0 || val == undefined) {
     return;
   }
-  if(val.length>25){
-    return val.substring(0,25)+"...";
-  }else{
+  if (val.length > 25) {
+    return val.substring(0, 25) + "...";
+  } else {
     return val;
   }
 }
 
-var sub2 = function (val) {
+var sub2 = function(val) {
   if (val.length == 0 || val == undefined) {
     return;
   }
-  if (val.length >50) {
+  if (val.length > 50) {
     return val.substring(0, 50) + "...";
   } else {
     return val;
   }
 }
-module.exports.sub=sub;
+module.exports.sub = sub;
 module.exports.sub2 = sub2;
