--- a/community-user/community/pages/detail/detail.wxss
+++ b/community-user/community/pages/detail/detail.wxss
@@ -83,59 +83,53 @@
 
 .answer-item {
   background: #fff;
-  padding: 25rpx 30rpx 0 0;
+  padding: 25rpx 30rpx 6rpx 30rpx;
+  border-bottom: solid 1px #ebebeb;
 }
 
-.answer-item  image {
-  width: 80rpx;
-  height: 80rpx;
-  border-radius: 80rpx;
+.answerer-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-.answer-item .avatar {
-  flex: 1;
+.avatar image{
+  height:70rpx;
+  width:70rpx;
+  border-radius:50%;
 }
 
-.answer-item .answer-content {
-  flex: 4;
-  text-align: left;
-  max-height:150rpx;
-}
 
-.answer-item .answer-content text {
-  display: block;
-}
-
-.answer-item .answer-content .answerer_name {
+.answerer-text{
+  width:610rpx;
   color: #666;
   font-size: 28rpx;
-  padding: 0 0 8rpx 0;
+  margin-left:10rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.answer-item .answer-content .content {
+.answerer-text image{
+
+  height: 32rpx;
+  width:32rpx;
+  margin-top: -4rpx;
+}
+
+.answer-content{
+  margin-left: 80rpx;
+  margin-top: -14rpx;
   color: #333;
   font-size: 30rpx;
-  line-height: 34rpx;
-}
-
-.flex-wrp {
-  display: flex;
-}
-
-.flex-item {
-  flex-grow: 1;
-  text-align: center;
-}
-
-.showtime {
-  border-bottom: solid 1px #ebebeb;
 }
 
 .showtime text {
   display: inline-block;
   color: #9a9c9b;
   font-size: 28rpx;
-  margin-left: 458rpx;
+  margin-left: 370rpx;
 }
 
 .none-answer{
